<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="textView_billAmountHint">Enter Amount</string>


    <string name="total">Total</string>


    <string name="tipAmount_View">$0.00</string>
    <string name="tip">Tip</string>
    <string name="tip_percent">15%</string>
    <string name="total_Amount">$0.00</string>


    <string name="People_prompt">Amount of people</string>

    <string-array name="number_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


</resources>
